--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,32 @@
-#hello-world{
-    color: red;
+body{
+    background-color: moccasin;
+    position: absolute;
+    width: 100%;
+    padding: 0;
+    margin: 0;
 }
+header {
+    background-color: aqua;
+    width: 100%;
+    height: 50px;
+    position: relative;
+    left: 0;
+    top: 0;
+    border-bottom: solid blue 2px;
+}
+.logo{
+    position: relative;
+     left: 20px;
+     top: 5px;
+    font-size: 24pt;
+    text-decoration: none;
+    color: tomato;
+}
+
+.link{
+    position: relative;
+    top: 10px;
+    font-size: 20pt;
+    text-decoration: none;
+}
+
