--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,1 +1,6 @@
-<p id="hello-world">Hello world</p>
+<header>
+ <a class="logo" href="/home">Buy Smart</a>
+</header>
+<button class="link" onclick="location.href='/signin';">Sign in</button>
+<button class="link" onclick="location.href='/add-product';">Add product</button>
+<button class="link" onclick="location.href='/search-view';">Search/View Products</button>
