log in inputs, signup form js

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,4 +1,17 @@
 <header>
  <a class="logo" href="/home">Buy Smart</a>
 </header>
-<p>sign up here</p>
+<div>
+Create New Username:
+<input id="userName" type="text">
+</div>
+<div>
+Create New Password:
+<input id="passWord" type="text">
+</div>
+<div>
+<button id="signupSubmit">Submit</button>
+</div>
+<button class="link" onclick="location.href='/signin';">Back</button>
+
+<script src="/javascript/signup.js"></script>
