--- a/views/signin.handlebars
+++ b/views/signin.handlebars
@@ -2,5 +2,16 @@
 <header>
  <a class="logo" href="/home">Buy Smart</a>
 </header>
-<p>sign in here</p>
+
+<div>
+Username:
+<input id="userName" type="text">
+</div>
+<div>
+Password:
+<input id="passWord" type="text">
+</div>
+<div>
+<button id="signinSubmit">Submit</button>
+</div>
 <button class="link" onclick="location.href='/signup';">Sign up</button>
