log in, sign up, log out routes and html

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,6 +1,8 @@
 <header>
  <a class="logo" href="/home">Buy Smart</a>
 </header>
-<button class="link" onclick="location.href='/signin';">Sign in</button>
+<button class="link" id="signout">Sign out</button>
 <button class="link" onclick="location.href='/add-product';">Add product</button>
 <button class="link" onclick="location.href='/search-view';">Search/View Products</button>
+
+<script src="/javascript/signout.js"></script>
