--- a/views/signin.handlebars
+++ b/views/signin.handlebars
@@ -4,8 +4,8 @@
 </header>
 
 <div>
-Username:
-<input id="userName" type="text">
+Email:
+<input id="email" type="text">
 </div>
 <div>
 Password:
@@ -15,3 +15,4 @@ Password:
 <button id="signinSubmit">Submit</button>
 </div>
 <button class="link" onclick="location.href='/signup';">Sign up</button>
+<script src="/javascript/signin.js"></script>
