--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -2,8 +2,8 @@
  <a class="logo" href="/home">Buy Smart</a>
 </header>
 <div>
-Create New Username:
-<input id="userName" type="text">
+What is you enail:
+<input id="email" type="text">
 </div>
 <div>
 Create New Password:
