--- a/views/add-product.handlebars
+++ b/views/add-product.handlebars
@@ -3,3 +3,33 @@
  <a class="logo" href="/home">Buy Smart</a>
 </header>
 <p>add product here</p>
+
+<form class="add-product-form">
+    <label for="product-name">Product Name</label>
+    <input type="text" id="product-name" name="product-name" />
+    {{!-- change to picking from pre-formatted options --}}
+    <label for="product-category">Category</label>
+    <input type="text" id="product-category" name="product-category" />
+    <label for="description">Description</label>
+    <input type="text" id="description" name="description" />
+    <label for="size">Size</label>
+    <input type="text" id="size" name="size" />
+    <label for="price">Price</label>
+    <input type="number" id="price" name="price" />
+    <label for="rating">Rating</label>
+    <input type="number" id="rating" name="rating" />
+    {{!-- temporary user_id field until login function works --}}
+
+    <label for="user-id">User Id</label>
+    <input type="number" id="user-id" name="user-id" />
+    {{!-- change to selecting from existing stores with option to add a new store --}}
+    {{!-- <label for="store">Store</label>
+    <input type="text" id="store" name="store"/> --}}
+<label for="store-id">Store ID</label>
+<input type="number" id="store-id" name="store-id" />
+
+     <button type="submit" class="btn">Create</button>
+</form>
+
+<script src='javascript/addProduct.js'></script>
+
