working on edit product functionality

--- a/views/add-product.handlebars
+++ b/views/add-product.handlebars
@@ -1,8 +1,9 @@
 
-<header>   
+{{!-- <header>   
  <a class="logo" href="/home">Buy Smart</a>
-</header>
-<p>add product here</p>
+</header> --}}
+<section>
+    <h2>Add product here</h2>
 
 <form class="add-product-form">
     <label for="product-name">Product Name</label>
@@ -30,6 +31,8 @@
 
      <button type="submit" class="btn">Create</button>
 </form>
+
+</section>  
 
 <script src='javascript/addProduct.js'></script>
 
