--- a/views/search-view.handlebars
+++ b/views/search-view.handlebars
@@ -6,7 +6,7 @@
     <ul>
         {{#each products}}
             <h2 class="title-text" onclick="location.href='/product/{{id}}';" style="cursor: pointer;">
-                  {{product_name}}  ${{price}} ({{rank}} out of 5)
+                  {{product_name}}  ${{price}} ({{rating}} out of 5)
             </h2>
         {{/each}}
     </ul>
