edit product page

--- a/views/signin.handlebars
+++ b/views/signin.handlebars
@@ -1,15 +1,11 @@
-
-<header>
- <a class="logo" href="/home">Buy Smart</a>
-</header>
-
+<section>
 <div>
-Email:
-<input id="email" type="text">
+<label for="email">Email:</label>
+<input id="email" for="email" type="text">
 </div>
 <div>
-Password:
-<input id="passWord" type="text">
+    <label for="password">Password:</label>
+<input id="password" name="password" type="text">
 </div>
 <div>
 <button id="signinSubmit">Submit</button>
