--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,17 +1,16 @@
-<header>
- <a class="logo" href="/home">Buy Smart</a>
-</header>
+<section>
 <div>
-What is you enail:
-<input id="email" type="text">
+<label for="email">Email:</label>
+<input id="email" name="email" type="text">
 </div>
 <div>
-Create New Password:
-<input id="passWord" type="text">
+    <label for="password">Password:</label>
+<input id="password" name="password" type="text">
 </div>
 <div>
 <button id="signupSubmit">Submit</button>
 </div>
 <button class="link" onclick="location.href='/signin';">Back</button>
+</section>
 
 <script src="/javascript/signup.js"></script>
