--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,8 +1,7 @@
-<header>
- <a class="logo" href="/home">Buy Smart</a>
-</header>
+<section>
 <button class="link" id="signout">Sign out</button>
-<button class="link" onclick="location.href='/add-product';">Add product</button>
-<button class="link" onclick="location.href='/search-view';">Search/View Products</button>
+<button class="link" onclick="location.href='/product/add';">Add product</button>
+<button class="link" onclick="location.href='/product';">Search/View Products</button>
 
+</section>
 <script src="/javascript/signout.js"></script>
