--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,6 +9,9 @@
     <title>Buysmart</title>
 </head>
 <body>
+    <header>   
+ <a class="logo" href="/home">Buy Smart</a>
+</header>
     {{{body}}}
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
