--- a/views/signin.handlebars
+++ b/views/signin.handlebars
@@ -8,7 +8,7 @@
 <input id="password" name="password" type="text">
 </div>
 <div>
-<button id="signinSubmit">Submit</button>
+<button id="signinSubmit" class="show-page-loading-msg" data-theme="b" data-textonly="false" data-textvisible="true" data-msgtext="Logging in...." data-inline="true">Submit</button>
 </div>
 <button class="link" onclick="location.href='/signup';">Sign up</button>
 <script src="/javascript/signin.js"></script>
