--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -8,7 +8,7 @@
 <input id="password" name="password" type="text">
 </div>
 <div>
-<button id="signupSubmit">Submit</button>
+<button id="signupSubmit" class="show-page-loading-msg" data-theme="b" data-textonly="false" data-textvisible="true" data-msgtext="Logging in...." data-inline="true">Submit</button>
 </div>
 <button class="link" onclick="location.href='/signin';">Back</button>
 </section>
