fixed add product form to pull from session user_id

--- a/views/partials/product-info.handlebars
+++ b/views/partials/product-info.handlebars
@@ -6,8 +6,8 @@
     {{category}}
     {{description}}
     {{size}}
-    {{price}}
-    {{store_name}}
-    {{city}}, {{state}} {{zip}}
+    ${{price}}
+    {{store.store_name}}
+    {{store.city}}, {{store.state}} {{store.zip}}
 
     </h3>
