--- a/views/add-product.handlebars
+++ b/views/add-product.handlebars
@@ -18,13 +18,13 @@
     <input type="number" id="rating" name="rating" />
     {{!-- temporary user_id field until login function works --}}
 
-    <label for="user-id">User Id</label>
-    <input type="number" id="user-id" name="user-id" />
+    {{!-- <label for="user-id">User Id</label>
+    <input type="number" id="user-id" name="user-id" /> --}}
     {{!-- change to selecting from existing stores with option to add a new store --}}
     {{!-- <label for="store">Store</label>
     <input type="text" id="store" name="store"/> --}}
-<label for="store-id">Store ID</label>
-<input type="number" id="store-id" name="store-id" />
+{{!-- <label for="store-id">Store ID</label>
+<input type="number" id="store-id" name="store-id" /> --}}
 
      <button type="submit" class="btn">Create</button>
 </form>
