spinner function updated

--- a/views/signin.handlebars
+++ b/views/signin.handlebars
@@ -11,4 +11,5 @@
 <button id="signinSubmit" class="show-page-loading-msg" data-theme="b" data-textonly="false" data-textvisible="true" data-msgtext="Logging in...." data-inline="true">Submit</button>
 </div>
 <button class="link" onclick="location.href='/signup';">Sign up</button>
+<script src="/javascript/spinner.js"></script>
 <script src="/javascript/signin.js"></script>
