--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -12,5 +12,5 @@
 </div>
 <button class="link" onclick="location.href='/signin';">Back</button>
 </section>
-
+<script src="/javascript/spinner.js"></script>
 <script src="/javascript/signup.js"></script>
