updating new product form to include store options

--- a/views/add-product.handlebars
+++ b/views/add-product.handlebars
@@ -16,10 +16,9 @@
     <input type="number" id="price" name="price" />
     <label for="rating">Rating</label>
     <input type="number" id="rating" name="rating" />
-    {{!-- temporary user_id field until login function works --}}
-
-    {{!-- <label for="user-id">User Id</label>
-    <input type="number" id="user-id" name="user-id" /> --}}
+    
+    <label for="store-id">Store</label>
+    <input type="select" id="store-id" name="store-id"
     {{!-- change to selecting from existing stores with option to add a new store --}}
     {{!-- <label for="store">Store</label>
     <input type="text" id="store" name="store"/> --}}
