--- a/views/search-view.handlebars
+++ b/views/search-view.handlebars
@@ -1,15 +1,34 @@
 
 <div class="product-body">
+    
+    <fieldset data-role="controlgroup" data-type="vertical">
+    <label for="storeNames">Stores</label>
+    <select id="storeNames">
+    <option value="">Select Store</option>
+        {{#each stores}}
+        <option value="{{id}}">{{store_name}}</option>
+        {{/each}} 
+    </select>
+<label for="categoryNames">Categories</label>
+    <select id="categoryNames">
+        <option value="">Select Category</option>
+        {{#each categories}}
+        <option value="{{category}}">{{category}}</option>
+        {{/each}}
+    </select>
+    </fieldset>
     <h2>name/price/rank</h2>
-    <ul>
+    <ul id="productsOnLoad">
         {{#each products}}
-            <h2 class="title-text" onclick="window.location.href='/product/view/{{id}}';" style="cursor: pointer;">
+            <li class="title-text" onclick="window.location.href='/product/view/{{id}}';" style="cursor: pointer;">
                   {{product_name}}  ${{price}} ({{rating}} out of 5)
-            </h2>
+            </li>
         {{/each}}
     </ul>
+    <div class="container"></div>
 </div>
-<a class="link" href="/product/price" id="sortByPrice">sort by price</a>
+{{!-- <a class="link" href="/product/price" id="sortByPrice">sort by price</a>
 <br>
-<a class="link" href="/product/rank" id="sortByRank">sort by rank</a>
+<a class="link" href="/product/rank" id="sortByRank">sort by rank</a> --}}
+<script src="/javascript/search_results.js"></script>
 
