--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -40,3 +40,15 @@ ul {
     font-size: 20pt;
 }
 
+h2 {
+    padding-left: 4%;
+}
+
+label {
+    padding-left: 4%;
+}
+
+a {
+    padding-left: 4%;
+}
+
