--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -26,11 +26,14 @@
 
             $.mobile.ajaxEnabled = false;
 
-            $.mobile.linkBindingEnabled = false;
+            {{!-- $.mobile.linkBindingEnabled = false; --}}
 
             $.mobile.hashListeningEnabled = false;
 
             $.mobile.pushStateEnabled = false;
+
+            {{!-- ${"#add-store"}.popup("enable"); --}}
+
         });
     </script>
 
