--- a/views/edit-product.handlebars
+++ b/views/edit-product.handlebars
@@ -1,4 +1,4 @@
-<section>
+<section class="edit-product">
     <h2>Edit product</h2>
 
 <form class="edit-product-form">
@@ -11,9 +11,9 @@
     <label for="size">Size</label>
     <input type="text" id="size" name="size" value="{{product.size}}" />
     <label for="price">Price</label>
-    <input type="number" id="price" name="price" value="{{product.price}}" />
+    <input type="decimal" id="price" name="price" value="{{product.price}}" />
     <label for="rating">Rating</label>
-    <input type="number" id="rating" name="rating" value="{{rating}}" />
+    <input type="number" id="rating" name="rating" value="{{product.rating}}" />
 
      <button type="submit" class="btn">Update</button>
 </form>
