--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,7 +16,12 @@
 
 <body>
     <header>
+        <div>
         <a class="logo" href="/home">Buy Smart</a>
+        </div>
+        <div>
+        <a class="link" id="signout">Sign out</a>
+        </div>
     </header>
     {{{body}}}
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
@@ -26,7 +31,7 @@
 
             $.mobile.ajaxEnabled = false;
 
-            $.mobile.linkBindingEnabled = false;
+            
 
             $.mobile.hashListeningEnabled = false;
 
