--- a/public/stylesheets/smartBuy.css
+++ b/public/stylesheets/smartBuy.css
@@ -238,8 +238,8 @@ html body .ui-group-theme-a .ui-bar-inherit {
 .ui-overlay-a,
 .ui-page-theme-a,
 .ui-page-theme-a .ui-panel-wrapper {
-	background-color: #ffcc33 /*{a-page-background-color}*/;
-	border-color: #ffcc33 /*{a-page-border}*/;
+	/* background-color: #ffcc33 {a-page-background-color};
+	a-page-bborder-color: #{ffcc33 order}; */
 	color: #000000 /*{a-page-color}*/;
 	text-shadow: 0 /*{a-page-shadow-x}*/ 1px /*{a-page-shadow-y}*/ 0 /*{a-page-shadow-radius}*/ #eeeeee /*{a-page-shadow-color}*/;
 }
