--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,9 +1,10 @@
 
 <section class="homepage">
-<button class="link" id="signout">Sign out</button>
+    
+<a id="addProduct" href="/product/add" class=" addProduct ui-btn ui-btn-inline ui-icon-delete ui-btn-icon-bottom">Add product</a>
 
-<button class="link" onclick="location.href='/product/add';">Add product</button>
-<button class="link" onclick="location.href='/product';">Search/View Products</button>
+<a id="product" href="/product" class=" product ui-btn ui-btn-inline ui-icon-delete ui-btn-icon-bottom">Search/View</a>
+{{!-- <button class="link" onclick="location.href='/product/add';">Add product</button>
+<button class="link" onclick="location.href='/product';">Search/View Products</button> --}}
 
 </section>
-<script src="/javascript/signout.js"></script>
