--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,18 +22,17 @@
         <div>
         <a class="link" id="signout">Sign out</a>
         </div>
-        <div data-role="navbar">
-  <ul>
-      {{!-- <li class="link" onclick="location.href='/product';">View Products</li> --}}
+        {{!-- <div data-role="navbar"> --}}
+  {{!-- <ul> --}}
     {{!--<li><a href="/product/add">Add Product</a></li>--}}
     {{!--<li><a href='/product'>View Products</a></li>--}}
     {{!-- <li><a href="#signout">Sign out</a></li> --}}
-  </ul>
-</div>
+  {{!-- </ul> --}}
+{{!-- </div> --}}
     </header>
     {{{body}}}
-    <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-    <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+    <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script> 
     <script>
         $(function () {
 
@@ -45,5 +44,5 @@
 
             </script>
 </body>
-
+<script src="/javascript/signout.js"></script>
 </html>
