home page style

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,6 +5,8 @@
     padding: 0;
     margin: 0;
 }  */
+
+
 header {
     background-color: white;
     width: 100%;
@@ -14,6 +16,7 @@ header {
     top: 0;
     border-bottom: solid blue 2px;
     padding-bottom: 5%;
+    
 }
 .logo{
     /* position: relative;
@@ -24,6 +27,7 @@ header {
     text-decoration: none;
     margin-left: 10px ;
     margin-top: 20px;
+    font-family: "Comic Sans MS";
 }
 
 /* .link{
@@ -49,10 +53,12 @@ ul {
   }
 #signout{
     float: right;
-    font-size: 20pt;
+    font-size: 16pt;
     margin-right: 20px;
-    margin-top: 25px;
+    margin-top: 30px;
     cursor: pointer;
+    color:black;
+    font-family: "Comic Sans MS";
     
 }
 h2 {
@@ -82,6 +88,7 @@ a {
 .add-product,
 .edit-product {
     padding: 5%;
+    
 }
 
 /* button {
@@ -92,16 +99,19 @@ a {
     height: 100px;
     width: 35%;
     left: 10px;
-    background-image: url("../stylesheets/images/backg.jpg");
+    background-image: url("../stylesheets/images/search.jpg");
     border-radius: 5%;
+    background-size: cover;
+    color: black;
 }
 #product{
     height: 100px;
 width: 35%;
 float: right;
 border-radius: 5%;
-background-image: url("../stylesheets/images/search.jpg");
+background-image: url("../stylesheets/images/drop.png");
 background-size: cover;
+color: black;
 }
 .homepage{
     background-image: url("../stylesheets/images/backg.jpg");
