fixed bugs Product model, stars

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -122,3 +122,12 @@ color: black;
 .hide {
     display: none;
 }
+
+.product-body{
+    position: relative;
+}
+#productInfo{
+    
+    position: relative;
+  margin-left: 0;
+}
