--- a/views/add-product.handlebars
+++ b/views/add-product.handlebars
@@ -24,7 +24,7 @@
     {{!-- <div class="ui-input-decimal ui-body-inherit ui-corner-all ui-shadow-inset"><input type="text" id="size" name="size"> --}}
     <input type="decimal" id="price" name="price" />
     {{!-- </div> --}}
-    <label for="rating">Rating</label>
+    <label for="rating">Rating from 1 to 5</label>
     <input type="number" id="rating" name="rating" />
   
      <button type="submit" class="btn">Create</button>
