--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,39 +10,33 @@
     <link rel="stylesheet" href="/stylesheets/smartBuy.min.css" />
     <link rel="stylesheet" href="/stylesheets/jquery.mobile.icons.min.css" />
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile.structure-1.4.5.min.css" />
-    
+
     <title>Buysmart</title>
 </head>
-
 <body>
     <header>
         <div>
-        <a class="logo" href="/home">Buy Smart</a>
+            <a class="logo" href="/home">Buy Smart</a>
         </div>
         <div>
-        <a class="link" id="signout">Sign out</a>
+            <a class="link" id="signout">Sign out</a>
         </div>
-        {{!-- <div data-role="navbar"> --}}
-  {{!-- <ul> --}}
-    {{!--<li><a href="/product/add">Add Product</a></li>--}}
-    {{!--<li><a href='/product'>View Products</a></li>--}}
-    {{!-- <li><a href="#signout">Sign out</a></li> --}}
-  {{!-- </ul> --}}
-{{!-- </div> --}}
     </header>
     {{{body}}}
-     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-    <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script> 
+    <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+    <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
     <script>
         $(function () {
 
             $.mobile.ajaxEnabled = false
-            
+
             $.mobile.hashListeningEnabled = false;
 
-            $.mobile.pushStateEnabled = false;})
+            $.mobile.pushStateEnabled = false;
+        })
 
-            </script>
+    </script>
 </body>
 <script src="/javascript/signout.js"></script>
+
 </html>
