--- a/views/signin.handlebars
+++ b/views/signin.handlebars
@@ -1,16 +1,17 @@
 <section>
-<h1>Sign In</h1>
-<div>
-<label for="email">Email:</label>
-<input id="email" for="email" type="text">
-</div>
-<div>
-    <label for="password">Password:</label>
-<input id="password" name="password" type="password">
-</div>
-<div>
-<button id="signinSubmit" class="show-page-loading-msg" data-theme="b" data-textonly="false" data-textvisible="true" data-msgtext="Logging in...." data-inline="true">Submit</button>
-</div>
-<button class="link" onclick="location.href='/signup';">Sign up</button>
-<script src="/javascript/spinner.js"></script>
-<script src="/javascript/signin.js"></script>
+    <h1>Sign In</h1>
+    <div>
+        <label for="email">Email:</label>
+        <input id="email" for="email" type="text">
+    </div>
+    <div>
+        <label for="password">Password:</label>
+        <input id="password" name="password" type="password">
+    </div>
+    <div>
+        <button id="signinSubmit" class="show-page-loading-msg" data-theme="b" data-textonly="false"
+            data-textvisible="true" data-msgtext="Logging in...." data-inline="true">Submit</button>
+    </div>
+    <button class="link" onclick="location.href='/signup';">Sign up</button>
+    <script src="/javascript/spinner.js"></script>
+    <script src="/javascript/signin.js"></script>
