--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,17 +1,18 @@
 <section>
     <h1>Sign Up</h1>
-<div>
-<label for="email">Email:</label>
-<input id="email" name="email" type="text">
-</div>
-<div>
-    <label for="password">Password:</label>
-<input id="password" name="password" type="password">
-</div>
-<div>
-<button id="signupSubmit" class="show-page-loading-msg" data-theme="b" data-textonly="false" data-textvisible="true" data-msgtext="Logging in...." data-inline="true">Submit</button>
-</div>
-<button class="link" onclick="location.href='/signin';">Back</button>
+    <div>
+        <label for="email">Email:</label>
+        <input id="email" name="email" type="text">
+    </div>
+    <div>
+        <label for="password">Password:</label>
+        <input id="password" name="password" type="password">
+    </div>
+    <div>
+        <button id="signupSubmit" class="show-page-loading-msg" data-theme="b" data-textonly="false"
+            data-textvisible="true" data-msgtext="Logging in...." data-inline="true">Submit</button>
+    </div>
+    <button class="link" onclick="location.href='/signin';">Back</button>
 </section>
 <script src="/javascript/spinner.js"></script>
 <script src="/javascript/signup.js"></script>
