style for product page and delete option

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -127,7 +127,8 @@ color: black;
     position: relative;
 }
 #productInfo{
-    
+    border-radius: 5px;
     position: relative;
   margin-left: 0;
 }
+
