--- a/views/search-view.handlebars
+++ b/views/search-view.handlebars
@@ -18,8 +18,8 @@
         </select>
     </fieldset>
     {{!-- <h2 class="ui-bar-d">name/price/rank</h2> --}}
-    <table data-role="table" id="table-column-toggle" data-mode="columntoggle"
-        class="ui-body-b ui-shadow table-stripe ui-responsive">
+    <table data-role="table" id="table-column-toggle" data-mode="columntoggle" class="ui-body-b ui-shadow table-stripe ui-responsive">
+       {{!-- class="ui-body-b ui-shadow table-stripe ui-responsive"> --}}
         <thead>
             <tr class="ui-bar-d">
                 <th>Name</th>
