--- a/views/single-product.handlebars
+++ b/views/single-product.handlebars
@@ -4,4 +4,6 @@
   <button class="link" onclick="window.location.href=`/edit/{{product.id}}`;">Edit product</button>
   {{/if}}
   <button class="link" onclick="window.location.href=`/product`;">Back to veiw </button>
+  <button id="deleteProductButton" class="link">Delete product</button>
 </section>
+<script src="/javascript/deleteProduct.js"></script>
