--- a/views/add-product.handlebars
+++ b/views/add-product.handlebars
@@ -40,6 +40,7 @@
             <button type="submit" class="btn" id="add-store-btn">Add Store</button>
         </form>
     </div>
+    <button  onclick="location.href='/product'" >Search/View</button>
 </section>
 
 <script src='/javascript/addProduct.js'></script>
