--- a/views/edit-product.handlebars
+++ b/views/edit-product.handlebars
@@ -16,6 +16,8 @@
         <input type="number" id="rating" name="rating" value="{{product.rating}}" />
 
         <button type="submit" class="btn">Update</button>
+        <button onclick="location.href='/product/add'">Add Product</button>
+        <button  onclick="location.href='/product'" >Search/View</button>
     </form>
 </section>
 
