--- a/views/search-view.handlebars
+++ b/views/search-view.handlebars
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <div class="product-body">
-
+    <button onclick="location.href='/product/add'">Add Product</button>
     <fieldset data-role="controlgroup" data-type="vertical">
         <label for="storeNames">Stores</label>
         <select id="storeNames">
@@ -20,6 +20,7 @@
     {{!-- <h2 class="ui-bar-d">name/price/rank</h2> --}}
     <table data-role="table" id="table-column-toggle" data-mode="columntoggle" class="ui-body-b ui-shadow table-stripe ui-responsive">
        {{!-- class="ui-body-b ui-shadow table-stripe ui-responsive"> --}}
+       
         <thead>
             <tr class="ui-bar-d">
                 <th>Name</th>
