--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -106,6 +106,17 @@ a {
     position: relative;
     margin-left: 0;
 }
+.signoutCover{
+    position: fixed;
+    right: 1px;
+    top: 5px;
+    width: 30vw;
+    height: 7vw;
+    background-color: white;
+    font-family: "Comic Sans MS";
+    font-size: 12pt;
+}
+
 
 /* /* If the screen size is 801px wide or more  */
 @media screen and (min-width: 801px) {
@@ -123,12 +134,14 @@ a {
     #signout {
         float: right;
         font-size: 4vw;
-        margin-right: 20px;
-        margin-top: 30px;
+        margin-right: 5px;
+        margin-top: 5px;
         cursor: pointer;
         color: black;
         font-family: "Comic Sans MS";
     }
+    
+    
   }
   
   /* /* If the screen size is 800px wide or less */
@@ -146,12 +159,12 @@ a {
     
     #signout {
         float: right;
-        font-size: 6vw;
-        margin-right: 20px;
-        margin-top: 20px;
+        font-size: 5vw;
+        margin-right: 5px;
+        margin-top: 5px;
         cursor: pointer;
         color: black;
         font-family: "Comic Sans MS";
     }
-  
+    
   }
