--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,7 +1,8 @@
-
 <section class="homepage">
-    
-<a id="addProduct" href="/product/add" class=" addProduct ui-btn ui-btn-inline ui-icon-delete ui-btn-icon-bottom">Add product</a>
-<a id="product" href="/product" class=" product ui-btn ui-btn-inline ui-icon-delete ui-btn-icon-bottom">Search/View</a>
+
+    <a id="addProduct" href="/product/add"
+        class=" addProduct ui-btn ui-btn-inline ui-icon-delete ui-btn-icon-bottom">Add product</a>
+    <a id="product" href="/product"
+        class=" product ui-btn ui-btn-inline ui-icon-delete ui-btn-icon-bottom">Search/View</a>
 
 </section>
