--- a/views/edit-product.handlebars
+++ b/views/edit-product.handlebars
@@ -4,13 +4,13 @@
     <form class="edit-product-form">
         <label for="product-name">Product Name</label>
         <input type="text" id="product-name" name="product-name" value="{{product.product_name}}" />
-        <label for="category-id">Category</label> <a href='#add-category' data-rel="popup">Add a new category</a>
+       {{!-- <label for="category-id">Category</label> <a href='#add-category' data-rel="popup">Add a new category</a>
         <select id="category-id" name="category-id">
             <option value=" ">Select a category</option>
             {{#each categories}}
             <option value="{{id}}">{{category_name}}</option>
             {{/each}}
-        </select>
+        </select> --}}
         <label for="description">Description</label>
         <input type="text" id="description" name="description" value="{{product.description}}" />
         <label for="size">Size</label>
@@ -21,6 +21,8 @@
         <input type="number" id="rating" name="rating" value="{{product.rating}}" />
 
         <button type="submit" class="btn">Update</button>
+        <button onclick="location.href='/product/add'">Add Product</button>
+        <button  onclick="location.href='/product'" >Search/View</button>
     </form>
 </section>
 
