--- a/views/edit-product.handlebars
+++ b/views/edit-product.handlebars
@@ -16,6 +16,7 @@
         <button type="submit" class="btn">Update</button>
 </form>
         <button onclick="location.href='/product/add'">Add Product</button>
+        <button onclick="location.href='/product'">Search/View</button>
 </section>
 
 <script src="/javascript/editProduct.js"></script>
