--- a/views/signin.handlebars
+++ b/views/signin.handlebars
@@ -12,6 +12,7 @@
     <div>
         <button id="signinSubmit" class="show-page-loading-msg" data-theme="b" data-textonly="false"
             data-textvisible="true" data-msgtext="Logging in...." data-inline="true">Submit</button>
+            <span id="sighninError">User not found.</span>
     </div>
     <button class="link" onclick="location.href='/signup';">Sign up</button>
     <script src="/javascript/signin.js"></script>
